--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div></div>
-    <button class="btn btn-primary">Agregar un TODO</button>
+    <button id="agregarTODO" class="btn btn-primary">Agregar un TODO</button>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-      <script src="scripts.js"></script>
+      <script type="text/javascript"src="scripts.js"></script>
 </body>
 </html>
