--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <form onsubmit="return getValue('inputTask')">
+                    <input type="text" id="inputTask">
+                </form>
+                <button id="agregarTODO" class="btn btn-primary">Agregar un TODO</button>
+            </div>
+        </div>
+    </div>
+    
     <div></div>
-    <button id="agregarTODO" class="btn btn-primary">Agregar un TODO</button>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       <script type="text/javascript"src="scripts.js"></script>
 </body>
