--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <input type="text" id="inputTask">
                 <button id="agregarTODO" class="btn btn-primary">Agregar un TODO</button>
                 <button id="tareaMasRapida" class="btn btn-success">Tarea mas rapida</button>
+                <div id="textoTareaRapida"></div>
             </div>
         </div>
         <div class="row">
@@ -22,7 +23,6 @@
                 <div id="tareas"></div>
             </div>
         </div>
-        <div id="tareaRapida"></div>
     </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       <script type="text/javascript"src="scripts.js"></script>
